<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.taiwan.justvet.justpet.pet.AddNewPetViewModel" />
        <import type="com.taiwan.justvet.justpet.util.LoadStatus"/>
        <import type="com.taiwan.justvet.justpet.pet.PetSpecies"/>
        <import type="com.taiwan.justvet.justpet.pet.PetGender"/>
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_cat"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:alpha="0.15"
            android:clickable="@{viewModel.loadStatus == LoadStatus.LOADING ? false : true}"
            android:onClick="@{() -> viewModel.selectSpecies(PetSpecies.CAT.value)}"
            app:layout_constraintEnd_toStartOf="@+id/icon_dog"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/title_pet_species"
            app:layout_constraintTop_toBottomOf="@+id/layout_image"
            app:srcCompat="@drawable/ic_cat" />

        <ImageView
            android:id="@+id/icon_dog"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:alpha="0.15"
            android:clickable="@{viewModel.loadStatus == LoadStatus.LOADING ? false : true}"
            android:onClick="@{() -> viewModel.selectSpecies(PetSpecies.DOG.value)}"
            app:layout_constraintBottom_toBottomOf="@+id/icon_cat"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/icon_cat"
            app:layout_constraintTop_toTopOf="@+id/icon_cat"
            app:srcCompat="@drawable/ic_dog" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/button_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:clickable="@{viewModel.loadStatus == LoadStatus.LOADING ? false : true}"
            android:onClick="@{() -> viewModel.checkProfileText()}"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/text_confirm"
            app:fb_defaultColor="@color/colorPrimary"
            app:fb_focusColor="@color/colorDiaryLight"
            app:fb_radius="5dp"
            app:fb_textColor="#FFFFFF"
            app:fb_textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_id_number_new" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:clickable="@{viewModel.loadStatus == LoadStatus.LOADING ? false : true}"
            android:onClick="@{() -> viewModel.leaveDialog()}"
            app:fb_defaultColor="@color/colorPrimary"
            app:fb_focusColor="@color/colorDiaryLight"
            app:fb_radius="5dp"
            app:fb_text="@string/text_cancel"
            app:fb_textColor="#FFFFFF"
            app:fb_textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_id_number_new" />

        <ImageView
            android:id="@+id/icon_female"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:alpha="0.15"
            android:clickable="@{viewModel.loadStatus == LoadStatus.LOADING ? false : true}"
            android:onClick="@{() -> viewModel.selectGender(PetGender.FEMALE.value)}"
            app:layout_constraintBottom_toBottomOf="@+id/icon_dog"
            app:layout_constraintEnd_toStartOf="@+id/icon_male"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/title_pet_gender"
            app:layout_constraintTop_toTopOf="@+id/icon_dog"
            app:srcCompat="@drawable/ic_female" />

        <ImageView
            android:id="@+id/icon_male"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:alpha="0.15"
            android:clickable="@{viewModel.loadStatus == LoadStatus.LOADING ? false : true}"
            android:onClick="@{() -> viewModel.selectGender(PetGender.MALE.value)}"
            android:padding="3dp"
            app:layout_constraintBottom_toBottomOf="@+id/icon_female"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/icon_female"
            app:layout_constraintTop_toTopOf="@+id/icon_female"
            app:srcCompat="@drawable/ic_male" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/title_pet_species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/text_species"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/icon_cat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/icon_cat" />

        <TextView
            android:id="@+id/title_pet_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/text_gender"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/icon_female"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/icon_female" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/border_corner_pet_image"
            android:clickable="@{viewModel.loadStatus == LoadStatus.LOADING ? false : true}"
            android:focusable="true"
            android:onClick="@{() -> viewModel.showGallery()}"
            app:layout_constraintDimensionRatio="1.78:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_add_new_pet">

            <ImageView
                android:id="@+id/icon_image"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:clickable="@{viewModel.loadStatus == LoadStatus.LOADING ? false : true}"
                android:onClick="@{() -> viewModel.showGallery()}"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_camera" />

            <ImageView
                android:id="@+id/image_pet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="@{viewModel.loadStatus == LoadStatus.LOADING ? false : true}"
                android:onClick="@{() -> viewModel.showGallery()}"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edit_text_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="15dp"
            android:clickable="@{viewModel.loadStatus == LoadStatus.LOADING ? false : true}"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_dog">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="@{viewModel.loadStatus == LoadStatus.LOADING ? false : true}"
                android:hint="@string/text_name"
                android:singleLine="true"
                android:text="@={viewModel.petName}"
                android:textAlignment="center" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edit_text_birthday"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            android:clickable="@{viewModel.loadStatus == LoadStatus.LOADING ? false : true}"
            android:onClick="@{ (view) -> viewModel.showDatePicker(view) }"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_edit_text_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="@{viewModel.loadStatus == LoadStatus.LOADING ? false : true}"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/text_birthday"
                android:inputType="none"
                android:onClick="@{ (view) -> viewModel.showDatePicker(view) }"
                android:singleLine="true"
                android:text="@{viewModel.petBirthday}"
                android:textAlignment="center" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_id_number_new"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            android:clickable="@{viewModel.loadStatus == LoadStatus.LOADING ? false : true}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_edit_text_birthday">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_id_number"
                android:singleLine="true"
                android:text="@={viewModel.petIdNumber}"
                android:textAlignment="center"
                android:clickable="@{viewModel.loadStatus == LoadStatus.LOADING ? false : true}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/title_add_new_pet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/text_new_pet_profile"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/button_close"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:clickable="@{viewModel.loadStatus == LoadStatus.LOADING ? false : true}"
            android:onClick="@{() -> viewModel.leaveDialog()}"
            android:padding="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.loadStatus == LoadStatus.LOADING ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>