...
    <string name="text_name">名字</string>
    <string name="text_birthday">出生日期</string>
    <string name="text_gender">性別</string>
    <string name="text_neutered">絕育(結紮)</string>
    <string name="text_modify">修改</string>
    <string name="text_cancel">取消</string>
    <string name="text_confirm">確定</string>
    <string name="text_name_empty_error">名字不可為空白</string>
    <string name="text_update_pet_profile_error">修改寵物資料失敗，請再試一次</string>
    <string name="text_profile_edit_success">修改寵物資料成功！</string>
    <string name="text_vaccine_invalid">今年都還沒有打疫苗喔！</string>
    <string name="text_no_event_notification">暫無提醒事項</string>

...
